--- a/gleifparser/src/main/resources/templates/home.html
+++ b/gleifparser/src/main/resources/templates/home.html
@@ -4,7 +4,8 @@
 <link rel="stylesheet"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{css/styles.css}">
-<script type="text/javascript" th:src="@{js/jquery/jquery-3.3.1.min.js}"></script>
+<link rel="stylesheet" th:href="@{fonts/font-awesome.min.css}">
+<script type="text/javascript" th:src="@{/webjars/jquery/3.4.0/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{js/home.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
@@ -56,28 +57,28 @@
 							</div>
 							<div class="row" style="margin: 20px -15px;">
 								<div class="col">
-									<div class="card" style="background-color: rgb(247, 246, 245);">
+									<div id="progressBarDiv" class="card" style="background-color: rgb(247, 246, 245);">
 										<div class="card-body">
 											<h4>
 												<small class="display-inline-block pull-right"></small>
 											</h4>
 											<p>
-												Campaign Velocity: <strong class="text-danger">High
+												Status: <strong id="progressStatusText" class="text-primary">Extracting XML data and Saving to Hana DB
 												</strong>
 											</p>
 											<div class="progress">
-												<div class="progress-bar" aria-valuenow="70"
+												<div id="progressBarMarker" class="progress-bar" aria-valuenow="70"
 													aria-valuemin="0" aria-valuemax="100" style="width: 70%;">70%</div>
 											</div>
 											<div class="row">
 												<div class="col-md-6">
 													<p>
-														Raised: $23,000<br />
-													</p>
+                                                        Processed Records: <p id="processedRecords">$23,000</p><br />
+                                                    </p>
 												</div>
 												<div class="col-md-6">
 													<p class="text-right">
-														Goal: $40,000<br />
+														Total: <p id="Total Records">$40,000</p><br />
 													</p>
 
 												</div>
@@ -101,20 +102,6 @@
 			</div>
 		</div>
 	</div>
-	</div>
 
 </body>
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
