--- a/gleifparser/src/main/resources/templates/home.html
+++ b/gleifparser/src/main/resources/templates/home.html
@@ -72,14 +72,13 @@
 											</div>
 											<div class="row">
 												<div class="col-md-6">
-													<p>
-                                                        Processed Records: <p id="processedRecords">$23,000</p><br />
+													<p id="processedRecords">
+                                                        Processed Records: 23,000<br />
                                                     </p>
 												</div>
 												<div class="col-md-6">
-													<p class="text-right">
-														Total: <p id="Total Records">$40,000</p><br />
-													</p>
+													<p class="text-right" id="TotalRecords">
+														Total:40,000<br />
 
 												</div>
 											</div>
