--- a/gleifparser/src/main/resources/static/css/styles.css
+++ b/gleifparser/src/main/resources/static/css/styles.css
@@ -1,15 +1,62 @@
 body {
-  background: linear-gradient(to right, #dae2f8, #d6a4a4);
-  background: linear-gradient(to right, #ece9e6, #ffffff);
+	background: linear-gradient(to right, #dae2f8, #d6a4a4);
+	background: linear-gradient(to right, #ece9e6, #ffffff);
 }
+
 strong {
-  font-weight: bold;
+	font-weight: bold;
 }
 
 .display-inline-block {
-  display: inline-block;
+	display: inline-block;
 }
 
-label{display:inline-block; }
-input{display:block;}
+label {
+	display: inline-block;
+}
 
+input {
+	display: block;
+}
+
+.dropbtn {
+	background-color: #4CAF50;
+	color: white;
+	padding: 14px;
+	font-size: 14px;
+	border: none;
+	cursor: pointer;
+}
+
+.dropbtn:hover, .dropbtn:focus {
+	background-color: #3e8e41;
+}
+
+.dropdown {
+	position: relative;
+	display: inline-block;
+}
+
+.dropdown-content {
+	display: none;
+	position: absolute;
+	background-color: #f9f9f9;
+	min-width: 160px;
+	overflow: auto;
+	box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+}
+
+.dropdown-content a {
+	color: black;
+	padding: 12px 16px;
+	text-decoration: none;
+	display: block;
+}
+
+.dropdown-content a:hover {
+	background-color: #f1f1f1
+}
+
+.show {
+	display: block;
+}
