--- a/gleifparser/src/main/resources/templates/home.html
+++ b/gleifparser/src/main/resources/templates/home.html
@@ -4,16 +4,24 @@
 <link rel="stylesheet"
 	th:href="@{/webjars/bootstrap/4.3.1/css/bootstrap.min.css}">
 <link rel="stylesheet" th:href="@{css/styles.css}">
-<link rel="stylesheet" th:href="@{fonts/font-awesome.min.css}">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel="stylesheet" th:href="@{/webjars/font-awesome/5.8.1/css/fontawesome.min.css}">
 <link rel="stylesheet"
-	href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	th:href="@{/webjars/jquery-ui/1.12.0/jquery-ui.css}">
+<link rel="stylesheet"
+	th:href="@{/webjars/jquery-ui/1.12.0/jquery-ui.theme.css}">
+
 <script type="text/javascript"
 	th:src="@{/webjars/jquery/3.4.0/jquery.min.js}"></script>
 <script type="text/javascript" th:src="@{js/home.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
 <script th:src="@{/webjars/stomp-websocket/stomp.min.js}"></script>
+<script type="text/javascript"
+	th:src="@{/webjars/datatables/1.10.19/js/jquery.dataTables.min.js}"></script>
+
+<script type="text/javascript"
+	th:src="@{/webjars/jquery-ui/1.12.0/jquery-ui.js}"></script>
+
 
 <title>Home Page</title>
 </head>
