--- a/gleifparser/src/main/resources/templates/home.html
+++ b/gleifparser/src/main/resources/templates/home.html
@@ -12,6 +12,9 @@
 
 <script type="text/javascript"
 	th:src="@{/webjars/jquery/3.4.0/jquery.min.js}"></script>
+<script type="text/javascript"
+	th:src="@{/webjars/jquery-ui/1.12.0/jquery-ui.js}"></script>
+
 <script type="text/javascript" th:src="@{js/home.js}"></script>
 <script th:src="@{/webjars/bootstrap/4.3.1/js/bootstrap.min.js}"></script>
 <script th:src="@{/webjars/sockjs-client/sockjs.min.js}"></script>
@@ -19,8 +22,6 @@
 <script type="text/javascript"
 	th:src="@{/webjars/datatables/1.10.19/js/jquery.dataTables.min.js}"></script>
 
-<script type="text/javascript"
-	th:src="@{/webjars/jquery-ui/1.12.0/jquery-ui.js}"></script>
 
 
 <title>Home Page</title>
@@ -132,7 +133,7 @@
 													<option>Pending-Archival
 											</select></label>
 											<button class="btn btn-primary" type="button"
-												id="uploadFileButton" style="margin-left: 100px">SEARCH</button>
+												id="searchButton" style="margin-left: 100px">SEARCH</button>
 
 										</div>
 									</div>
